--- a/desktop/core/src/desktop/js/reactComponents/FileChooser/FileChooserWithButton/FileChooserWithButton.scss
+++ b/desktop/core/src/desktop/js/reactComponents/FileChooser/FileChooserWithButton/FileChooserWithButton.scss
@@ -14,10 +14,11 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-@import '../../../components/styles/colors';
+@use 'variables' as vars;
+
 
 .hue-file-chooser__button {
-  background-color: $hue-primary-color-dark;
+  background-color: vars.$hue-primary-color-dark;
   color: white;
   margin-left: 40px;
   margin-top: 12px;
