--- a/desktop/core/src/desktop/js/apps/editor/components/result/reactExample/ReactExample.scss
+++ b/desktop/core/src/desktop/js/apps/editor/components/result/reactExample/ReactExample.scss
@@ -1,4 +1,7 @@
 // Component styling using BEM notation
+@use 'classes';
+@use 'variables' as vars;
+@use 'mixins';
 
 $my-color:   #f8f8f8;
 
@@ -8,5 +11,6 @@ $my-color:   #f8f8f8;
 
 .react-example__title,
 .react-example__description {
-  color: black;
+  color: vars.$hue-primary-color-dark;
+  @include mixins.fade-in();
 }
