--- a/desktop/core/src/desktop/js/components/sidebar/sidebar.scss
+++ b/desktop/core/src/desktop/js/components/sidebar/sidebar.scss
@@ -14,7 +14,6 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-@import '../styles/colors';
 @import '../styles/mixins';
 @import '../styles/variables';
 @import './variables';
@@ -108,8 +107,8 @@
   display: flex;
   flex-shrink: 0;
   align-items: center;
-  color: $fluid-white;
-  padding: 0 0 0 $fluid-spacing-m;
+  color: $fluidx-white;
+  padding: 0 0 0 $fluidx-spacing-m;
   font-size: 16px;
 
   & > a {
@@ -121,7 +120,7 @@
 
 .sidebar-app-switcher-trigger {
   transition: font-size $sidebar-animation-duration-base;
-  margin-right: $fluid-spacing-xxs;
+  margin-right: $fluidx-spacing-xxs;
   flex-shrink: 0;
   font-size: 20px;
   color: $sidebar-default-text-color;
@@ -138,7 +137,7 @@
 }
 
 .sidebar-header-product-text-logo {
-  margin-left: $fluid-spacing-xxs;
+  margin-left: $fluidx-spacing-xxs;
   white-space: nowrap;
   overflow: hidden;
   height: 40px;
@@ -147,7 +146,7 @@
 .sidebar-body {
   flex: auto;
   overflow: hidden auto;
-  padding-top: $fluid-spacing-m;
+  padding-top: $fluidx-spacing-m;
   position: relative;
 
   > div {
@@ -176,12 +175,12 @@
   display: flex;
   align-items: center;
   color: $sidebar-default-text-color;
-  padding-left: $fluid-spacing-m;
+  padding-left: $fluidx-spacing-m;
 }
 
 .sidebar-sidebar-section-name {
   opacity: 1;
-  margin-top: $fluid-spacing-s;
+  margin-top: $fluidx-spacing-s;
   white-space: nowrap;
 }
 
@@ -219,7 +218,7 @@
   width: 20px;
   display: flex;
   justify-content: center;
-  margin-right: $fluid-spacing-xs;
+  margin-right: $fluidx-spacing-xs;
   transition-duration: $sidebar-animation-duration-base;
   // using the `all` syntax seemed to cause the icon color change to be delayed
   // compared to the rest of the icon.
@@ -253,7 +252,7 @@
 
   .sidebar-sidebar-item-accordion-sub-item {
     width: $sidebar-width;
-    margin-left: $fluid-spacing-s;
+    margin-left: $fluidx-spacing-s;
   }
 }
 
@@ -374,7 +373,7 @@
 }
 
 .sidebar-footer-version-number {
-  margin-left: $fluid-spacing-m;
+  margin-left: $fluidx-spacing-m;
   color: $sidebar-default-text-color;
   flex-grow: 1;
   font-family: Roboto Mono, Menlo, Monaco, Consolas, "Courier New", monospace;
