--- a/desktop/core/src/desktop/js/reactComponents/Toolbar/ToolbarShared.scss
+++ b/desktop/core/src/desktop/js/reactComponents/Toolbar/ToolbarShared.scss
@@ -1,7 +1,7 @@
-@import '../../components/styles/variables';
+@use 'variables' as vars;
 
-$toolbar-border-color: $fluid-gray-300;
-$toolbar-background-color: $fluid-gray-050;
+$toolbar-border-color: vars.$fluidx-gray-300;
+$toolbar-background-color: vars.$fluidx-gray-050;
 $toolbar-height-small: 32px;
 $toolbar-height-medium: 40px;
 $toolbar-height-large: 48px;
