OPEN AI token config

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -199,6 +199,9 @@
   # ^\/.*$,^http:\/\/www.mydomain.com\/.*$
   ## redirect_whitelist=^(\/[a-zA-Z0-9]+.*|\/)$
 
+  # OPEN AI API Token
+  # open_ai_token="sk-token"
+
   # Image version/ Build version of Hue
   # hue_image_version="2022.2.2.1"
   ## hue_image_version=
